base/solution03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution03
  namespace: tenant-example
  labels:
    app: solution03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution03
  template:
    metadata:
      labels:
        app: solution03
    spec:
      containers:
      - name: solution03
        image: 183070076065.dkr.ecr.us-east-1.amazonaws.com/example-repo:main-0
