base/solution03/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution03-service
  namespace: tenant-example
  labels:
    app: solution03
spec:
 selector:
   app: solution03
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
