base/solution03/virtual-service.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: solution03-https
  namespace: tenant-example
  labels:
    app: solution03
    gateway: https
spec:
  virtualHost:
    domains:
    - 'solution03.sm.ea.sdlc.k8s.cbrands.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: tenant-example-solution03-service-9091
            namespace: gloo-system
